--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:id="@+id/nome"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Salada de frutas"
-        tools:layout_editor_absoluteX="72dp"
-        tools:layout_editor_absoluteY="64dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+    </TextView>
+
+    <TextView
+        android:id="@+id/descricao"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Laranja, banana e abacaxi"
+        app:layout_constraintTop_toBottomOf="@+id/nome"
+        app:layout_constraintStart_toStartOf="@+id/nome">
+    </TextView>
+
+    <TextView
+        android:id="@+id/valor"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="12.99"
+        app:layout_constraintTop_toBottomOf="@+id/descricao"
+        app:layout_constraintStart_toStartOf="@+id/descricao">
+    </TextView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
