Utilizando imagens alternativas e Adicionando fontes ao projeto

--- a/app/src/main/res/layout/produto_item.xml
+++ b/app/src/main/res/layout/produto_item.xml
@@ -10,6 +10,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:fontFamily="@font/montserrat_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/imageView"
         app:layout_constraintTop_toTopOf="parent"
@@ -42,6 +45,6 @@
         app:layout_constraintEnd_toStartOf="@id/produto_item_nome"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+        app:srcCompat="@drawable/produto" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
