--- a/app/src/main/res/layout/activity_lista_produtos.xml
+++ b/app/src/main/res/layout/activity_lista_produtos.xml
@@ -16,15 +16,16 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/produto_item" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/activity_lista_produto_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
         android:focusable="true"
         android:layout_margin="16dp"
+        android:text="Novo produto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_action_add" />
+        app:icon="@drawable/ic_action_add" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
